    author name within brakets and the comment:

S <mave> comment goes here

   where S can be one of the following symbols:
    '+' : means that something has been added to NNFW
    '-' : means that something has been dropped from NNFW
    'B' : means a BugFix
    'C' : means that something has been changed (e.g. implementation of a Class or a signature method)
==== End of Legend ====

C <mave> added support for Mac Os X Frameworks bundle
C <mave> simplified construction of nnfw-config in CMakeLists.txt

    ==> 261 - 06/03/2008 - 1.0.5 release <==

B <mave> resolved inconsistence on saving mode property of CopyLinker on XML
C <mave> improved comments on BackPropagationAlgo::getError

    ==> 260 - 06/03/2008 - 1.0.4 release <==

B <mave> resolved the parsing of 'mode' attribute of CopyLinker
B <mave> resolved "XML I/O CopyLinker Parse Error" reported on forum

    ==> 259 - 04/03/2008 - 1.0.3 release <==

+ <mave> added momentum to BackPropagationAlgo
+ <mave> added methods setRate, rate to BackPropagationAlgo

    ==> 258 - 22/02/2008 - 1.0.2 release <==

+ <mave> added FindNNFW.cmake; it will be installed in CMAKE_ROOT/Modules

    ==> 257 - 21/02/2008 <==

+ <mave> added NNFWConfig.cmake for helping configuration with CMake
+ <mave> added "--config" to nnfw-config that print-out the NNFW_CONFIG
C <mave> improved nnfw-config eliminating unecessary flags reported by the script
C <mave> improved CMake build; added version information to library

    ==> 253 - 16/01/2008 - 1.0.1 release <==

C <mave> changed the name of SparseMatrixLinker::getMask() to mask()
B <mave> SparseMatrixLinker was not Propertized complaint, 
		added "mask" property and mask/setMask Variant methods
B <mave> corrected version on nnfw-config

    ==> 242 - 16/01/2008 - 1.0.0 release <==

C <mave> BackPropagationAlgo uses AbstractModifier retrievied by Factory
+ <mave> added method in Factory for getting/registering AbstractModifier subclasses
+ <mave> added AbstractModifier hierarchy